--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,8 @@
       }
   },
   "background": {
-    "service_worker": "service_worker.js"
+    "service_worker": "background/service_worker.js",
+    "type": "module"
   },
   "content_scripts": [
     {
